<resources>
    <string name="app_name">RwtPosMobile</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Powered_By_Radiance">Powered By Radiance</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Orders">Orders</string>
    <string name="Today">Today</string>
    <string name="Monthly">Monthly</string>
    <string name="Total">Total</string>
    <string name="Demand">Demand</string>
    <string name="Sale">Sale</string>
    <string name="Bill_List">Bill List</string>
    <string name="Demand_List">Demand List</string>
    <string name="Challan_List">Challan List</string>
    <string name="Settings">Settings</string>
    <string name="Create_New_Bill">Create New Bill</string>
    <string name="Create_New_Return">Create New Return</string>
    <string name="Search_Invoice">Search Invoice</string>
    <string name="Create_Bill">Create Bill</string>
    <string name="Customer_Mobile">Customer Mobile *</string>
    <string name="ITEMS">ITEMS</string>
    <string name="Add_Items">Add Items</string>
    <string name="Save">Save</string>
    <string name="Add_Demand">Add Demand</string>
    <string name="Create_Demand">Create Demand</string>
    <string name="Outlet_Settings">Outlet Settings</string>
    <string name="Owner_Name">Owner Name</string>
    <string name="Store_Name">Store Name</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="Address">Address</string>
    <string name="Show_Header_in_invoice">Show Header in invoice</string>
    <string name="Show_Footer_in_invoice">Show Footer in invoice</string>
    <string name="Save_Settings">Save Settings</string>
    <string name="Bill_Detail">Bill Detail</string>
    <string name="Bill_No">Bill No :</string>
    <string name="Bill_Date">Bill Date :</string>
    <string name="Name">Name :</string>
    <string name="Mobile_Column">Mobile :</string>
    <string name="Edit_Bill">Edit Bill</string>
    <string name="view_detail">view detail</string>
    <string name="Sale_Price">Sale Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Discount_Per">Discount %</string>
    <string name="Edit_Item">Edit Item</string>
    <string name="Your_Changes_will_be_discarded">Your Changes will be discarded</string>
    <string name="Continue_editing">Continue editing</string>
    <string name="Discard_Changes">Discard Changes</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Add_Customer">Add Customer</string>
    <string name="Add_Barcode">Add Barcode</string>
    <string name="Add_to_Bill">Add to Bill</string>
    <string name="Return_List">Return List</string>
    <string name="Search">Search</string>
    <string name="Enter_Invoice_Number">Enter Invoice Number</string>
    <string name="Product_Detail">Product Detail</string>
    <string name="Product_Name">Product Name</string>
    <string name="Catgeory_Name">Catgeory Name</string>
    <string name="Group">Group</string>
    <string name="Product_SKU">Product SKU</string>
    <string name="Purchase_Price">Purchase Price</string>
    <string name="Available_Stock">Available Stock</string>
    <string name="Minimum_Stock">Minimum Stock</string>
    <string name="Tax_Percent">Tax Percent % </string>
    <string name="Description">Description</string>
    <string name="Return_Bill_Detail">Return Bill Detail</string>
    <string name="Inventory">Inventory</string>
    <string name="Search_Product">Search Product</string>
    <string name="Return">Return</string>
</resources>
