<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sort_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/Your_Changes_will_be_discarded"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/continue_editing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/corner_round_btn_shape"
            android:text="@string/Continue_editing"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/discard_changes_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/corner_round_white_background_btn_shape"
            android:text="@string/Discard_Changes"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

    </LinearLayout>
</RelativeLayout>